# robot-arm

./: .gitignore  CMakeLists.txt
include/: .kinematics.hpp.swp  camera.h  kinematics.hpp  mesh.h  model.h  shader_s.h
include/glad/: glad.h
source/: glad.c  kinematics.cpp  mesh.cpp  model.cpp  shader_s.cpp
test/: .eigen.cpp.swp  eigen.cpp  ogl.cpp
test/shaders/: 3-3-shader.vs
